--- a/assets/style.scss
+++ b/assets/style.scss
@@ -39,7 +39,7 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
   font-family: -system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  color: $darkerGray;
+  color: #fff;
   font-weight: bold;
 	
   line-height: 1.7;
@@ -55,7 +55,7 @@ h1, h2, h3, h4, h5, h6 {
 h1 {
   font-size: 42px;
   a {
-    color: inherit;
+    color: #fff;
   }
 }
 
@@ -306,7 +306,7 @@ p > img {
 
 .site-name {
   margin: 0;
-  color: $darkGray;
+  color: #fff;
   cursor: pointer;
   font-family: $helveticaNeue;
   font-weight: 300;
@@ -351,7 +351,7 @@ nav {
 
     @include mobile {
       margin: 0 10px;
-      color: $blue;
+      color: #fff;
     }
   }
 }
@@ -615,7 +615,7 @@ Modules - reusable parts of our design
 }
 
 .text-link {
-    color: #000;
+    color: #fff;
     text-decoration: none;
     border-bottom: 1px dotted #000;
 }
