--- a/assets/style.scss
+++ b/assets/style.scss
@@ -700,17 +700,16 @@ Modules - reusable parts of our design
   font-size: 14.5px;
   padding: 2px 13px;
   border: none;
-  background-color: #4CAF50;
+  background-color: #663399;
   border-radius: 50px;
   color: #fff;
 }
 
 .pagination a, .pagination span {
   padding: 7px 18px;
-  border: 1px solid #eee;
   margin-left: -2px;
   margin-right: -2px;
-  background-color: #ffffff;
+  background-color: #1c1c20;
   display: inline-block;
 }
 
