--- a/assets/style.scss
+++ b/assets/style.scss
@@ -149,6 +149,7 @@ table tr td :last-child {
   box-sizing: border-box;
   font-size: 18px;
   background-color: #1c1c20;
+  color: #fff;
 }
 
 .share-box {
