--- a/assets/style.scss
+++ b/assets/style.scss
@@ -154,7 +154,7 @@ table tr td :last-child {
 
 .share-box {
   font-weight: bold;
-  color: #222;
+  color: #f0f0f0;
 }
 
 span[data-pullquote] {
@@ -379,7 +379,7 @@ nav {
     color: $gray;
     font-size: 22px;
     font-style: italic;
-    background-color: #ede1ff;
+    background-color: #1c1c20;
   }
 
   .you-may-like{
