--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -12,8 +12,9 @@ code {
 }
 
 .highlighter-rouge { 
-  background-color: #FAFAFA; 
-  color: #FF554A; 
+  background-color: #222; 
+  color: #fff;
+  font-size: 18px;
 }
 
 .highlight .c { color: #586E75 } /* Comment */
