--- a/assets/style.scss
+++ b/assets/style.scss
@@ -14,6 +14,7 @@
 /**************/
 
 @import url('https://fonts.googleapis.com/css?family=Roboto');
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css");
 
 html {
   font-size: 100%;
