--- a/assets/style.scss
+++ b/assets/style.scss
@@ -717,8 +717,8 @@ Modules - reusable parts of our design
 
 .pagination a {    
   &:hover {
-      background-color: #f1f1f1;
-      color: #333;
+      background-color: #1c1c20;
+      color: #00a3a3;
   }
 }
 
