--- a/_sass/_darcula.scss
+++ b/_sass/_darcula.scss
@@ -6,14 +6,14 @@
 }
 
 code {
-    font-family:'Bitstream Vera Sans Mono','Courier', monospace;
-    color: #d8d8d8;
+  font-family: 'Menlo', 'Monaco', 'Consolas', 'Courier New', monospace;
+  color: #d8d8d8;
 }
 
 .highlighter-rouge { 
-    background-color: #FAFAFA; 
-    color: #FF554A; 
-    font-size: 16px;
+  background-color: #222; 
+  color: #fff;
+  font-size: 18px;
 }
 
 .highlight .hll { background-color: #f1fa8c }
