--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -27,10 +27,10 @@ layout: default
     {{ content }}
   </div>
 
-  <div>
+<!--   <div>
     <p><span class="share-box">Share:</span> <a href="http://twitter.com/share?text={{ page.title }}&url={{site.url}}{{page.url}}" target="_blank"><i class="svg-icon bi bi-twitter"></i></a></p>
   </div>
-
+ -->
   <!--<div class="date">
     Written on {{ page.date | date: "%B %e, %Y" }}
   </div>-->
