Change bg color, add padding to highlighter-rouge

--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -12,9 +12,10 @@ code {
 }
 
 .highlighter-rouge { 
-  background-color: #222; 
+  background-color: #282a36; 
   color: #fff;
   font-size: 18px;
+  padding: 4px;
 }
 
 .highlight .c { color: #586E75 } /* Comment */
