Change bg color, add padding to highlighter-rouge

--- a/_sass/_darcula.scss
+++ b/_sass/_darcula.scss
@@ -11,9 +11,10 @@ code {
 }
 
 .highlighter-rouge { 
-  background-color: #222; 
+  background-color: #282a36; 
   color: #fff;
   font-size: 18px;
+  padding: 4px;
 }
 
 .highlight .hll { background-color: #f1fa8c }
