--- a/assets/style.scss
+++ b/assets/style.scss
@@ -29,6 +29,7 @@ body {
   font-weight: 400;
   font-size: 21px;
   height: 100%;
+  padding: 0 1rem;
 }
 
 .container {
@@ -54,7 +55,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-  font-size: 42px;
+  font-size: 36px;
   a {
     color: #fff;
   }
@@ -700,7 +701,7 @@ Modules - reusable parts of our design
 
 .post-tags a {
   font-size: 14.5px;
-  padding: 2px 13px;
+  padding: 4px 18px;
   border: none;
   background-color: #663399;
   border-radius: 50px;
