--- a/assets/style.scss
+++ b/assets/style.scss
@@ -180,7 +180,7 @@ span[data-pullquote]:before {
 }
 
 a {
-  color: #00a3a3;
+  color: #00bdbd;
   text-decoration: none;
 	cursor: pointer;
   &:hover, &:active {
@@ -703,7 +703,7 @@ Modules - reusable parts of our design
   font-size: 14.5px;
   padding: 4px 18px;
   border: none;
-  background-color: #663399;
+  background-color: #8040bf;
   border-radius: 50px;
   color: #fff;
 }
