--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -11,6 +11,10 @@ code {
   color: #d8d8d8;
 }
 
+.highlight pre {
+ font-size: 19px; 
+}
+
 .highlighter-rouge { 
   background-color: #282a36; 
   color: #fff;
