--- a/assets/style.scss
+++ b/assets/style.scss
@@ -41,7 +41,7 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
   font-family: -system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  color: #DEFFF9;
+  color: #E4FFFA;
   font-weight: bold;
 	
   line-height: 1.7;
