--- a/assets/style.scss
+++ b/assets/style.scss
@@ -24,7 +24,7 @@ html {
 body {
   background: #1c1c20;
   font-family: system-ui, -apple-system, Roboto, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
-  color: #fff;
+  color: #f8f8f2;
   line-height: 1.7;
   font-weight: 400;
   font-size: 21px;
@@ -41,7 +41,7 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
   font-family: -system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  color: #E4FFFA;
+  color: #fff;
   font-weight: bold;
 	
   line-height: 1.7;
