--- a/assets/style.scss
+++ b/assets/style.scss
@@ -27,7 +27,7 @@ body {
   color: #f8f8f2;
   line-height: 1.7;
   font-weight: 400;
-  font-size: 21px;
+  font-size: 1.2rem;
   height: 100%;
   padding: 0 1rem;
 }
