--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -18,7 +18,7 @@ code {
 .highlighter-rouge { 
   background-color: #282a36; 
   color: #fff;
-  font-size: 18px;
+  font-size: 1.1rem;
   padding: 4px;
 }
 
