--- a/assets/style.scss
+++ b/assets/style.scss
@@ -41,7 +41,7 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: 'Libre Franklin', sans-serif;
+  font-family: system-ui, -apple-system, Roboto, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
   color: #fff;
   font-weight: bold;
 	
@@ -56,6 +56,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
+  font-family: 'Libre Franklin', sans-serif;
   font-size: 34px;
   a {
     color: #fff;
