--- a/assets/style.scss
+++ b/assets/style.scss
@@ -466,7 +466,7 @@ body:after {
 }
 
 .post h1{
-  font-family: -system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-family: 'Libre Franklin', sans-serif;
   text-align: center;
   font-weight: bold;
   font-kerning: auto;
