--- a/assets/style.scss
+++ b/assets/style.scss
@@ -15,6 +15,7 @@
 
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 @import url('https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css");
 
 html {
@@ -95,6 +96,7 @@ h4 {
 
 p {
   margin: 15px 0;
+  font-family: 'Inter', sans-serif;
 }
 
 figcaption {
